# blogr

./: .env  .gitignore  .license  CSS - Scrollbar Styling.url  Cargo.toml  Https-Prod-Cargo.toml  Https-Prod-Rocket.toml  Rocket.toml  blogr-proj-2018-03-20.sublime-workspace  blogr-proj-post-fractal-frontpage.sublime-workspace  blogr-wksp-2018-01-26.sublime-workspace  blogr-wksp-post-fractal-frontpage.sublime-workspace  db_backup-testy.sql  deploy.env  dot.env  handlebars_templates.rs  libpq.lib  page_count - Copy.json  page_count.json  page_count.json2  page_stats.json  page_stats.json1  sublime-project-2.sublime-workspace  sublime-project.sublime-workspace  sublime-workspace-2.sublime-workspace  sublime-workspace.sublime-workspace  total_views.json  workspace.bat
contrib/: Cargo.toml
database/: add_triggers.sql  back_test.sql  blog-db-deploy.sql  blog_database_backup - fixed triggers.sql  blog_database_backup.sql  blog_db_w-markdown.sql  database_setup.txt  description_function.sql
lib/: Cargo.toml
lib/src/: lib.rs
logs/: page_stats.json  total_views.json  unique_stats.json
notes/: 3d sphere css background.txt  Articles Info Query.sql  Https Stuff.txt  article staging.txt  articles_insert.sql  articles_new.sql  assets.txt  associated bank telesec code.txt  backup_script.txt  blog layout.txt  blog todo - data structure changes.txt  blog todo.txt  blog-manage-colors.txt  blog.sites-enabled  blog_db_author_added  blogr.sublime-workspace  blogr_db_before-switching-to-tags-array-actual  blogr_db_post-size-limits.sql  blogr_db_post_tag2_and_all-tags.sql  blogr_db_tag_array.sql  blogr_post-add_tags-implemented-no-info.sql  blogr_post-add_tags-implemented2.sql  browser location-status bar color.txt  categories.sql  cmder - conemu - config and use.txt  color tweaks.txt  comments.txt  comrak md options.txt  css removed from page-code-template.txt  date formatting.txt  find all colors regex.txt  font awesome icons.txt  force download.txt  form validation.txt  highlightjs themes.txt  how I setup https log.txt  html - Meta Tags - Favorite Icon and Apple-Touch-Icons and Other Meta tags.txt  http headers.txt  icons - font awesome  jake vet appt 2.txt  (+28 more)
notes/Old Code/: cache-pages-article-call_context_info.rs  context_macro-ctx_info.rs  hbs_templates.rs  old cache module Cachable trait code.rs  pages-pre-msg-move.rs  pagination-test.rs  routes-mod.rs  settings-pre-ssl.rs  toc.rs  todo list 2018-04-01.txt
old/: fonts-testing.css  main_full_categories_tags_etc.rs  user_data.rs
old/cache-playground/: cache.rs
old/counter-before-mutex-type/: counter - working page count and total count - before wrapping add.rs  main.rs  pages.rs
old/express-after-transition/: xpress - before file cache.rs
old/login-throttling/: ral_user - before throttling.rs
old/pagination/: paginate.rs
old/rocket-static-cache-before/: xpress.rs
old/src/: articles_rdbms.rs  user_data_rdbms.rs  view.rs
old/src-after Express/: express-before cleanup.rs  roles.rs  roles2.rs
old/src-with-express/: express.rs  pages_administrator.rs
old/static/: footer.html  form.html  header.html  js-colors.js  layout_template - Copy.html  old-blog.js
old/templates-before-edit-cloned-to-create/: edit-article-template.html.hbs
old/templates-before-hardcoded-tags/: article-template.html.hbs  articles-pagination-template.html.hbs  articles-template.html.hbs  basic-template.html.hbs  general-template.html.hbs  search-template.html.hbs
old/xpress-transition/: main.rs  pages.rs  xpress.rs
pages/: Cargo.toml  about-me.md  about-site.md  about.page  accept.rs  collate.rs  counter.rs  database.rs  login.rs  nginx-site.conf  rocket-auth-login.md  rocket-dbconn-example.rs  rust-rocket-web-apps.md  rust-webserver.md  setup-vps.md  shannon-entropy.md  sublime-theme.md  templates.rs  tutorials.md  vishuscode.tar  xpress.rs
pages/archive/: about.page  about.page.bak  linux-tips.md  rust-rocket-web-apps.md  rust-snippets.md  setup-vps.md
rocket-file-cache/src/: named_in_memory_file.rs
scripts/: build.sh  db_backup-prod.sh  run.sh
scripts/first generation/: db_backup-file.bat
scripts/server-after-service/: db_backup.bat
src/: accept.rs  admin_auth.rs  administrator.rs  articles.rs  authorize.rs  blog.rs  blogr.sublime-workspace  cache.rs  collate.rs  content - Copy.rs  content.rs  cookie_data.rs  cookies.rs  counter.rs  counthits.rs  data.rs  express.rs  file_cache.rs  hbs_templates - naive img.rs  hbs_templates.rs  iplog.rs  layout.rs  location.rs  login_form_status.rs  main-deploy.rs  main.rs  old_pages.rs  pages.rs  pages_administrator.rs  paginate.rs  ral_administrator.rs  ral_user.rs  referrer.rs  responder.rs  sanitize.rs  settings.rs  static_pages.rs  templates.rs  toc.rs  user_auth.rs  (+6 more)
src/cache/: body.rs  mod.rs  pages.rs
src/routes/: body.rs  mod.rs  pages.rs
static/: RustCustom-3.tmTheme  about-me.html  article-template.hbs  blog-2018-01-07.js  blog.js  blog_after-2018-01-07.js  blog_after-2018-01-11.js  blog_after-2018-01-12.js  blog_after-old_must-diff.js  blog_after.js  font-selector.js  footer.html  general-template.hbs  hbs-template.html  header.html  index - before replacing with hbs template.html  index.html  layout_template.html  manage.html  manage2.html  palette-lg.html  palette-md.html  remarkable.html  template.html  template_body.html  template_footer.html  template_form.html  template_header.html  test.html
static/assets/: Image to Data URI converter.url  after-1.0.2.js  after-1.0.2.js.bak  after-1.0.3.js  before-1.0.0.js  (+15 more)
templates/: article-template.html.hbs  articles-pagination-template.html.hbs  articles-template.html.hbs  basic-template.html.hbs  create-template-old.html.hbs  create-template.html.hbs  edit-article-template-before-header-imgs.html.hbs.bak  edit-article-template.html.hbs  edit-articles-template.html.hbs  general-template.html.hbs  login-template.html.hbs  manage-pagination-template.html.hbs  page-code-template.html.hbs  page-template.html.hbs  pagestats.html.hbs  pagestats.html.hbs.dev  pageviews-template.html.hbs  search-template.html.hbs  tags-template.html.hbs
(+143 files in other folders)
