[package]
name = "blogr"
version = "0.2.8"
authors = ["Andrew Prindle <prindle.andrew@gmail.com>"]

[dependencies]
brotli = "1.0.9"
chrono = "0.4.0"
dotenv = "0.10.1"
# diesel = { version = "0.16.0", features = ["postgres"] }
# diesel_codegen = { version = "0.16.0", features = ["postgres"] }
env_logger = "0.4.3"
handlebars = "0.29.*"
htmlescape = "0.3.1"
lazy_static = "0.2.8"
log = "0.3.8"
# multipart = "0.13.3"
postgres = { version = "0.15.1", features = ["with-chrono"] }
# postgres = "0.15.1"
r2d2 = "0.7.4"
r2d2_postgres = "0.13.0"
regex = "0.2.2"
rmp-serde = "0.13.7"
rocket-simpleauth = {path = "auth-rs"}
rocket = "0.3.3"
rocket_codegen = "0.3.3"
# rocket-simpleauth = "0.3.0"
# rocket = "0.3.2"
# rocket_codegen = "0.3.2"
rocket-auth-login = "0.2.*"
# rocket-auth-login = {path = "../rocket-auth-login"}
rss = "1.*"
serde_json = "1.0.2"
serde = "1.0.11"
serde_derive = "1.0.11"
time = "0.1"
titlecase = "0.10.0"
zopfli = "0.3.6"

# rocket_codegen = {path = "codegen"}
# rocket = {path = "lib"}
# 
# [dependencies.rocket_contrib]
# # version = "*"
# default-features = false
# features = ["handlebars_templates"]
# path = "contrib"

[dependencies.rocket_contrib]
version = "0.3.3"
default-features = false
features = ["handlebars_templates"]
# path = "contrib"

