[package]
name = "blogr"
version = "0.5.3"
authors = ["Andrew Prindle <prindle.andrew@gmail.com>"]


description = "A web blog written in Rust using the Rocket web framework.  Uses Postgresql to store users and blog articles.  Designed to be feature rich and easy to modify."

# documentation = "..."
# homepage = "https://github.com/vishusandy/blogr"

# relative to root
# readme = "readme.md"

# up to 5 keywords
keywords = ["rocket", "blog", "cms", "content", "management"]

# This is a list of up to five categories that must match exactly
# List of categories available at crates.io/category_slugs
categories = ["authentication", "web-programming", "database", "text-processing"]

# This is a string description of the license for this package.  Multiple licenses can be separated with a `/`.
license = "Apache-2.0"

# exclude = ["build/**/*.o", "doc/**/*.html"]
exclude = ["database", "examples/**", "src/private.rs"]



[dependencies]
aho-corasick = "0.6.4"
backtrace-sys = {version = "0.1.15" }
brotli = "1.0.9"
chrono = "0.4.0"
chashmap = "2.2.0"
comrak = "0.2.5"
# concurrent_hashmap = "0.2.2"
dotenv = "0.10.1"
dotenv_macros = "0.10.0"
# diesel = { version = "0.16.0", features = ["postgres"] }
# diesel_codegen = { version = "0.16.0", features = ["postgres"] }
# env_logger = "0.4.3"
evmap = "2.0.2"
handlebars = "0.29.*"
htmlescape = "0.3.1"
lazy_static = "0.2.8"
libflate = "0.1.12"
# log = "0.3.8"
markdown = "0.2"
# multipart = "0.13.3"
postgres = { version = "0.15.1", features = ["with-chrono"] }
# postgres = "0.15.1"
pulldown-cmark = { version = "0.0.11", default-features = false }
r2d2 = "0.7.4"
r2d2_postgres = "0.13.0"
regex = "0.2.2"
rmp-serde = "0.13.7"
# rocket = "0.3.3"
rocket_codegen = "0.3.3"
# rocket_contrib = { version = "0.3.3", default-features = false, features= [""] }
# rocket = "0.3.2"
# rocket_codegen = "0.3.2"
# rocket-auth-login = {path = "../rocket-auth-login"}
rocket-auth-login = "0.2.2"
# rocket-file-cache = "0.10.1"
# rocket-file-cache = { path = "rocket-file-cache" }
# rocket-simpleauth = {path = "auth-rs"}
# rocket-simpleauth = "0.3.0"
rss = "1.*"
serde_json = "1.0.2"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_yaml = "0.7.3"
# time = "0.1"
titlecase = "0.10.0"
twoway = { version = "0.1.7", features=["pcmp"] }
urlencoding = "1.0.*"
zopfli = "0.3.6"

# rocket_codegen = {path = "codegen"}
# rocket = {path = "lib"}
# 
# [dependencies.rocket_contrib]
# # version = "*"
# default-features = false
# features = ["handlebars_templates"]
# path = "contrib"


# rocket_contrib = { version = "0.3.3", default-features = false, features= [""] }
# or
[dependencies.rocket_contrib]
version = "0.3.3"
default-features = false
features = ["handlebars_templates"]
# path = "contrib"

[dependencies.rocket]
version = "0.3.3"
# features = ["tls"]





